--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://avidhara.github.io/blog/
+baseURL: https://blog.avidhara.cloud
 languageCode: en-us
 title: Avidhara:- Blog
 theme: ["PaperMod"]
