--- a/hugo.yaml
+++ b/hugo.yaml
@@ -11,12 +11,12 @@ pagination:
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
-buildDrafts: false
+buildDrafts: true
 buildFuture: false
 buildExpired: false
 enableEmoji: true
 pygmentsUseClasses: true
-mainsections: ["posts", "papermod"]
+mainsections: ["posts", "edge"]
 
 languages:
   en:
@@ -42,7 +42,13 @@ caches:
   images:
     dir: :cacheDir/images
 
+editPost:
+    URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
+    Text: "Suggest Changes" # edit text
+    appendFilePath: true 
+
 params:
+  env: production
   ShowShareButtons: true
   ShowReadingTime: true
   displayFullLangName: true
