--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,13 +1,14 @@
+---
 baseURL: https://blog.avidhara.cloud
 languageCode: en-us
 title: Avidhara:- Blog
-theme: ["PaperMod"]
-googleAnalytics: "G-K49SMX24H3"
+theme: [PaperMod]
+googleAnalytics: G-K49SMX24H3
 
-copyright: "© [Avidhara Technologies Pvt LTD](https://avidhara.cloud) 2025"
+copyright: © [Avidhara Technologies Pvt LTD](https://avidhara.cloud) 2025
 
 pagination:
-  pagerSize: 5
+    pagerSize: 5
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
@@ -16,56 +17,56 @@ buildFuture: false
 buildExpired: false
 enableEmoji: true
 pygmentsUseClasses: true
-mainsections: ["posts", "edge"]
+mainsections: [posts, edge]
 
 languages:
-  en:
-    languageName: "English"
-    weight: 1
-    taxonomies:
-      category: categories
-      tag: tags
-      series: series
-    menu:
-      main:
-        - name: Archive
-          url: archives
-          weight: 5
-        - name: Search
-          url: search/
-          weight: 10
-        - name: Tags
-          url: tags/
-          weight: 10
+    en:
+        languageName: English
+        weight: 1
+        taxonomies:
+            category: categories
+            tag: tags
+            series: series
+        menu:
+            main:
+                - name: Archive
+                  url: archives
+                  weight: 5
+                - name: Search
+                  url: search/
+                  weight: 10
+                - name: Tags
+                  url: tags/
+                  weight: 10
 
 caches:
-  images:
-    dir: :cacheDir/images
+    images:
+        dir: :cacheDir/images
 
 editPost:
-    URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
-    Text: "Suggest Changes" # edit text
-    appendFilePath: true 
+    URL: https://github.com/avidhara/blog/tree/main/content/posts
+    Text: Suggest Changes   # edit text
+    appendFilePath: true
 
 params:
-  env: production
-  ShowShareButtons: true
-  ShowReadingTime: true
-  displayFullLangName: true
-  ShowPostNavLinks: true
-  ShowBreadCrumbs: true
-  ShowCodeCopyButtons: true
-  ShowRssButtonInSectionTermList: true
-  ShowAllPagesInArchive: true
-  ShowPageNums: true
-  ShowToc: true
+    env: production
+    ShowShareButtons: true
+    ShowReadingTime: true
+    displayFullLangName: true
+    ShowPostNavLinks: true
+    ShowBreadCrumbs: true
+    ShowCodeCopyButtons: true
+    ShowRssButtonInSectionTermList: true
+    ShowAllPagesInArchive: true
+    ShowPageNums: true
+    ShowToc: true
 
-  socialIcons:
-    - name: github
-      title: View Source on Github
-      url: "https://github.com/avidhara"
+    socialIcons:
+        - name: github
+          title: View Source on Github
+          url: https://github.com/avidhara
 outputs:
-  home:
-    - HTML
-    - RSS
-    - JSON 
+    home:
+        - HTML
+        - RSS
+        - JSON
