Adding Post for Vault integration with K8S

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -12,7 +12,7 @@ pagination:
 
 enableInlineShortcodes: true
 enableRobotsTXT: true
-buildDrafts: true
+buildDrafts: false
 buildFuture: false
 buildExpired: false
 enableEmoji: true
