--- a/hugo.yaml
+++ b/hugo.yaml
@@ -43,10 +43,7 @@ caches:
     images:
         dir: :cacheDir/images
 
-editPost:
-    URL: https://github.com/avidhara/blog/tree/main/content/posts
-    Text: Suggest Changes   # edit text
-    appendFilePath: true
+
 
 params:
     env: production
@@ -60,6 +57,12 @@ params:
     ShowAllPagesInArchive: true
     ShowPageNums: true
     ShowToc: true
+    TocOpen: true
+    comments: true
+    editPost:
+        URL: https://github.com/avidhara/blog/tree/main/content/posts
+        Text: Suggest Changes   # edit text
+        appendFilePath: true
 
     socialIcons:
         - name: github
